# Math42FinalProject

./: README.md  baseline_context_analysis.ipynb  data.ipynb  markov_chain_analysis.ipynb  pyproject.toml  recurrenceMomentum.ipynb
